fixed body font size and intro component spacing

--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -8,5 +8,5 @@
 }
 
 .margin {
-  margin-bottom: 2rem;
+  margin-bottom: 1.75rem;
 }
