--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,7 +53,7 @@ html {
 body {
   font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Helvetica Neue', sans-serif;
-  font-size: var(--fs--md);
+  font-size: var(--fs--sm);
   line-height: 1.6;
   color: hsl(var(--clr--white));
   -webkit-font-smoothing: antialiased;
